# y0

./: .bumpversion.cfg  .codecov.yml  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.md.rej  justfile  pyproject.toml  pyproject.toml.rej  setup.cfg  setup.py  tox.ini  tox.ini.rej
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/agents/: SKILLS.md
.github/workflows/: cruft.yml  tests.yml  tests.yml.rej
docs/: 2026-05-28-proof-narrative.md  Implementation_comparison_findings.md  Makefile  Midspiral-Formal-ID-Experiment.md  Shpitser-ID.md  lean_and_dafny_dag.md  shpitser-figures.tex
docs/plans/: 2025-05-07-dafny-formal-specification-retrofit.md  2026-05-09-dafny-id-algorithm.md  2026-05-09-dafny-idimpl-timeout-fix.md  2026-05-09-dafny-vs-lean-spike-scorecard.md  2026-05-09-id-autogen-phase-checklist.md  2026-05-14-claims-vs-status-gap.md  2026-05-15-fix-testing-gaps.md  2026-05-19-dafny-axiom-ledger.md  2026-05-19-dafny-de-axiomitization-plan.md  2026-05-19-dafny-de-axiomitization-progress.md  2026-05-21-dafny-probability-assignment-alignment.md  2026-05-21-dafny-probability-finite-sum-decision.md  2026-05-21-dafny-truncatepmf-factor-level-design.md  2026-05-22-dafny-proof-dependency-dags.md  2026-05-26-lean-port-plan.md  lessons-learned-from-dafny-experiment.md
docs/source/: cli.rst  conditional_independence.rst  conf.py  conf.py.rej  dsl.rst  examples.rst  graph.rst  graph_mutation.rst  hierarchical.rst  identification.rst  index.rst  installation.rst  lvdags.rst  mutation.rst  parser.rst  struct.rst  tian_id.rst  transport.rst
notebooks/: Biology_Analysis.ipynb  Cluster Graph Example.ipynb  Code_Coverage_Tutorial.ipynb  Counterfactual Identification.ipynb  Counterfactual Transportability Advanced.ipynb  Counterfactual Transportability.ipynb  CounterfactualIdentification.ipynb  Counterfactual_Transportability_Demo.ipynb  Counterfactual_Transportability_Demo_Final.ipynb  Counterfactual_Transportability_Testing_Edge_Cases.ipynb  Cyclic Identification Example.ipynb  Cyclic-ID-Tutorial.ipynb  Cyclic_ID_High_level.ipynb  Cyclic_ID_Tutorial.ipynb  Cyclic_ID_Tutorial_Final.ipynb  DSL Demo-Equation.ipynb  DSL Demo.ipynb  DeDriDemo.ipynb  Demo_CTFTR.ipynb  Demo_Sigma_TR.ipynb  Demo_Tian_ID.ipynb  Dual_Regulator_Analysis1.ipynb  Example Graphs.ipynb  Example_Notebook.ipynb  Falsification.ipynb  Getting-Started.ipynb  HCM Manuscript Figures.ipynb  Hierarchical Causal Models.ipynb  ID_Algorithm_Implementation.ipynb  ID_star and IDC_star Algorithm Walkthrough.ipynb  Identification.ipynb  Make Counterfactual Graph.ipynb  Reduce_from_ID.ipynb  Simulating a Linear SCM.ipynb  Simulation.ipynb  Surrogate Outcomes.ipynb  Surrogate_Outcomes.ipynb  SymPyTorch Demo.ipynb  What is identification.ipynb  cyclic_ID_algorithm.ipynb  (+9 more)
notebooks/Old Counterfactual Transport Notebooks/: Demo_CTFTR.ipynb  Demo_Sigma_TR.ipynb  graveyard.py
paper/: README.md  build.sh  paper.bib  paper.md
paper/figures/: figure_1.py
scripts/: build_dafny_id_extracted.sh  build_dafny_id_full_extracted.sh  build_dafny_id_line2_extracted.sh  build_dafny_id_line3_extracted.sh  build_dafny_id_line4_extracted.sh  build_dafny_id_line5_extracted.sh  build_dafny_id_line6_extracted.sh  build_dafny_id_line7_extracted.sh  build_dafny_id_tian2002_extracted.sh  check_dafny_id_extracted_runtime.py  check_dafny_id_full_runtime.py  check_dafny_id_line2_extracted_runtime.py  check_dafny_id_line3_extracted_runtime.py  check_dafny_id_line4_extracted_runtime.py  check_dafny_id_line5_extracted_runtime.py  check_dafny_id_line6_extracted_runtime.py  check_dafny_id_line7_extracted_runtime.py  check_dafny_id_tian2002_extracted_runtime.py  compare_dafny_tian2002_tex_cases.py  compare_id_engines.py  count_lean_sorrys.py  generate_dafny_conformance_tests.py  generate_proof_dag.py  proof_dag_concepts.yaml  run_ruff_on_tracked.py
src/dafny/: cocycle.dfy  dag.dfy  do_calculus.dfy  id_full_extracted.dfy  id_line1_extracted.dfy  id_line2_extracted.dfy  id_line3_extracted.dfy  id_line4_extracted.dfy  id_line5_extracted.dfy  id_line6_extracted.dfy  id_line7_extracted.dfy  id_tian2002_extracted.dfy  identification.dfy  identification_executable_core.dfy  interventional.dfy  probability.dfy  semi_markovian.dfy
src/lean/: .gitignore  Y0Lean.lean  lake-manifest.json  lakefile.lean
src/y0/: __init__.py  __main__.py  canonicalize.py  case_studies.py  causaleffect.py  cli.py  cli.py.rej  complexity.py  constants.py  controls.py  dedri.py  dsl.py  equation.py  example_backdoor.py  example_frontdoor.py  example_sars.py  examples.py  graph.py  hierarchical.py  identify.py  mutate.py  parser.py  parser_utils.py  predicates.py  probability.py  r_utils.py  simplify.py  simulation.py  struct.py  utils.py  verma.py  version.py
tests/: __init__.py  constants.py  test_canonicalize.py  test_causaleffect.py  test_complexity.py  test_concrete_distribution.py  test_controls.py  test_counterfactual_transportability.py  test_dafny_correspondence.py  test_dafny_id_correspondence.py  test_dedri.py  test_dsl.py  test_generate_proof_dag.py  test_generator_id_conformance.py  test_graph.py  test_hierarchical.py  test_identify.py  test_is_identifiable.py  test_mutate.py  test_parser.py  test_predicates.py  test_simplify.py  test_version.py
tests/data/: Napkin_data_generator.py  generate.py  id_ir_cases.json  napkin_data.csv  napkin_data_generator.py  napkin_test.tsv  napkin_treat_x_0.tsv
tests/oracle/: test_dafny_oracle_minimal.py
tests/test_algorithm/: __init__.py  backdoor_example.csv  cases.py  frontdoor_example.csv  napkin_example.csv  test_cg.py  test_conditional_independencies.py  test_counterfactual_transportability.py  test_cyclicID.py  test_cyclic_id.py  test_estimation.py  test_falsification.py  test_get_conditional_independencies.py  test_id_alg.py  test_id_c_star.py  test_id_extracted_routing.py  test_id_generated_parity.py  test_id_ir.py  test_id_napkin.py  test_id_star.py  test_id_star_alg.py  test_idc_star.py  (+12 more)
(+131 files in other folders)
