##########################
# Setup.py Configuration #
##########################
[metadata]
name = y0
version = 0.0.2-dev
description = Python code for causal modeling.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/y0-causal-inference/y0
download_url = https://github.com/y0-causal-inference/y0/releases
project_urls =
    Bug Tracker = https://github.com/y0-causal-inference/y0/issues
    Source Code = https://github.com/y0-causal-inference/y0

# Author information
author = Jeremy Zucker
author_email = jeremy.zucker@pnnl.gov
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Compilers
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
keywords =
    cthoyt
    cookiecutter
    structural causal modeling

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # Other
    pyparsing


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    y0 = y0.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = y0
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/y0
    .tox/*/lib/python*/site-packages/y0

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
